# zed-codemux

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  US_VERIFICATION.md  autoresearch.ideas.md  autoresearch.jsonl  extension.toml  justfile  prek.toml
.agents/: setup
.github/workflows/: ci.yml  release.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.zed/: tasks.json
Formula/: codemux.rb
docs/: zed-integration.md
extension/: Cargo.toml  extension.toml
extension/src/: lib.rs
scripts/: setup-secrets.sh
scripts/ralph/: .gitignore  .last-branch  prd.json  progress.txt  prompt-opencode.md  prompt-pi.md  ralph.sh
scripts/ralph/src/: main.rs
src/: config.rs  config_tests.rs  detect.rs  detect_tests.rs  launcher.rs  main.rs  main_tests.rs  sanitize.rs  sanitize_tests.rs  shell_escape.rs  tmux.rs  tmux_tests.rs  upgrade.rs  zellij.rs  zellij_tests.rs
tasks/: prd-zed-mux.md  zed-extension-submission.md
tests/: cli.rs
