[package]
name = "codemux"
version = "0.1.0"
edition = "2021"
authors = ["jellydn <dung@productsway.com>"]
description = "Drop-in CLI binary that opens Zed terminals inside tmux or zellij — port of vscode-mux to Zed"
license = "MIT"
repository = "https://github.com/jellydn/zed-codemux"
keywords = ["tmux", "zellij", "zed", "terminal", "multiplexer"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

[[bin]]
name = "codemux"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", default-features = false, features = ["derive", "std", "help", "usage"] }

serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"



[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
codegen-units = 1
