[package]
name = "codemux"
version = "0.1.0"
edition = "2021"
authors = ["jellydn <dung@productsway.com>"]
description = "Drop-in CLI binary that opens Zed terminals inside tmux or zellij — port of vscode-mux to Zed"
license = "MIT"
repository = "https://github.com/jellydn/zed-codemux"
keywords = ["tmux", "zellij", "zed", "terminal", "multiplexer"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

[[bin]]
name = "codemux"
path = "src/main.rs"

[workspace]
members = ["extension"]
resolver = "2"

[dependencies]







[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
codegen-units = 1
overflow-checks = false

